force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/Krow__Krow_Timesheet_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Klient Timesheet Configuration</label>
</CustomObject>