force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Account_Required__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when account is need to fill required on my timesheet page then checked this.</description>
    <inlineHelpText>when account is need to fill required on my timesheet page then checked this.</inlineHelpText>
    <label>Account Required</label>
    <type>Checkbox</type>
</CustomField>