force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Allow_New_Time_Entry_After_Submit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Allow_New_Time_Entry_After_Submit__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, it will create new timesheet master, when all existing timesheets for current week has been approved, else it will append records in the approved timehseets.</description>
    <inlineHelpText>Do you want to create new timesheets after approved? yes, then please check it.</inlineHelpText>
    <label>Allow New Time Entry After Submit</label>
    <type>Checkbox</type>
</CustomField>