force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Allow_Punch_Time_Edit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Allow_Punch_Time_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, Punch time(IN/OUT) will be editable on My Timesheet UI.</description>
    <label>Allow Punch Time Edit</label>
    <type>Checkbox</type>
</CustomField>