force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Allow_Timesheet_Self_Approval__c.field-meta.xml
<CustomField>
    <fullName>Krow__Allow_Timesheet_Self_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Timesheet Self Approval</label>
    <type>Checkbox</type>
</CustomField>