force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Assigned_Approver_Can_Edit_Record__c.field-meta.xml
<CustomField>
    <fullName>Krow__Assigned_Approver_Can_Edit_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assigned approver can edit record during approval process</description>
    <inlineHelpText>Assigned approver can edit record during approval process</inlineHelpText>
    <label>Assigned Approver Can Edit Record</label>
    <type>Checkbox</type>
</CustomField>