force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Collapse_Tasks_On_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__Collapse_Tasks_On_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapse Tasks On Timesheet</label>
    <type>Checkbox</type>
</CustomField>