force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Copy_Time_Entries__c.field-meta.xml
<CustomField>
    <fullName>Krow__Copy_Time_Entries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will copy the time entries, if not checked, it will only copy Project/Milestone/Tasks.</description>
    <label>Copy Time Entries</label>
    <type>Checkbox</type>
</CustomField>