force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable Account</label>
    <type>Checkbox</type>
</CustomField>