force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Billable_Flag__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Billable_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will hide the flag on my timesheet.</description>
    <inlineHelpText>If checked, will hide the flag on my timesheet.</inlineHelpText>
    <label>Disable Billable Flag</label>
    <type>Checkbox</type>
</CustomField>