force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Completed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Completed_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, completed tasks will not be available on My Timesheet UI.</description>
    <label>Disable Completed Tasks</label>
    <type>Checkbox</type>
</CustomField>