force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Task</label>
    <type>Checkbox</type>
</CustomField>