force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Task_Time_Assignment_Error__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task_Time_Assignment_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Task Time Assignment Error</label>
    <type>Checkbox</type>
</CustomField>