force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Task_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task_Time_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will disable the TIME tab on task detail panel.</description>
    <label>Disable Task Time Entry</label>
    <type>Checkbox</type>
</CustomField>