force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Time_Approval__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Time_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removes the Approval button on My Timesheet</description>
    <inlineHelpText>Removes the Approval button on My Timesheet</inlineHelpText>
    <label>Disable Time Approval</label>
    <type>Checkbox</type>
</CustomField>