force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Disable_Utilization_Display_On_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Utilization_Display_On_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will not show the Utilization % fields on My Timesheet - only hours.</description>
    <inlineHelpText>If checked, will not show the Utilization % fields on My Timesheet - only hours.</inlineHelpText>
    <label>Disable Utilization Display On Timesheet</label>
    <type>Checkbox</type>
</CustomField>