force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Display_Assigned_Tasks_Only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Assigned_Tasks_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Assigned Tasks Only</label>
    <type>Checkbox</type>
</CustomField>