force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Display_Task_Hours_on_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Task_Hours_on_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, SCH BILL and VAR columns will be displayed.</description>
    <label>Display Task Hours on Timesheet</label>
    <type>Checkbox</type>
</CustomField>