force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Display_Timesheets_By_Alpha_When_Saved__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Timesheets_By_Alpha_When_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Timesheets By Alpha When Saved</label>
    <type>Checkbox</type>
</CustomField>