force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Full_Week_Entry__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Full_Week_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is used to put total hours for week and used to split as per work schedules</description>
    <label>Enable Full Week Entry</label>
    <type>Checkbox</type>
</CustomField>