force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Holiday_Time_Edit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Holiday_Time_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, holiday timesheet entry can be edited.</description>
    <label>Enable Holiday Time Edit</label>
    <type>Checkbox</type>
</CustomField>