force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Max_Hour_Per_Day_Limit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Max_Hour_Per_Day_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked timesheet entry for any given day can not exceed 24 hours.</description>
    <inlineHelpText>If checked timesheet entry for any given day can not exceed 24 hours.</inlineHelpText>
    <label>Enable Max Hour Per Day Limit</label>
    <type>Checkbox</type>
</CustomField>