force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Multiple_Project_Roles__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Multiple_Project_Roles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check it to select a project role for a time entry</description>
    <label>Enable Multiple Project Roles</label>
    <type>Checkbox</type>
</CustomField>