force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Project_Based_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Project_Based_Timesheet__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If check, Timesheets would be saved on project basis else user basis.</description>
    <label>Enable Project Based Timesheet</label>
    <type>Checkbox</type>
</CustomField>