force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Project_Manager_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Project_Manager_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Project Manager Picklist</label>
    <type>Checkbox</type>
</CustomField>