force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Project_Typeahead__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Project_Typeahead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will enable the Typeahead on My Timesheet.</description>
    <inlineHelpText>If checked, will enable the Typeahead on My Timesheet.</inlineHelpText>
    <label>Enable Project Typeahead</label>
    <type>Checkbox</type>
</CustomField>