force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Schedule_On_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Schedule_On_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default unchecked, if checked &apos;My schedules&quot; section will render on &quot;My Timehseet&quot;.</description>
    <inlineHelpText>Default unchecked, if checked &apos;My schedules&quot; section will render on &quot;My Timehseet&quot;.</inlineHelpText>
    <label>Enable Schedule On Timesheet</label>
    <type>Checkbox</type>
</CustomField>