force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Team_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Team_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected will open up the Resource drop-down on My Timesheet - but list Active Resources where User Manager = Logged in User.</description>
    <inlineHelpText>If selected will open up the Resource drop-down on My Timesheet - but list Active Resources where User Manager = Logged in User.</inlineHelpText>
    <label>Enable Team Picklist</label>
    <type>Checkbox</type>
</CustomField>