force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Enable_Timesheet_Recall__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Timesheet_Recall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recall button on My Timesheet that will change the Status of any Timesheets for the Week to &quot;Recalled&quot; Status whereby the Timesheet Status is Submitted.</description>
    <inlineHelpText>Recall button on My Timesheet that will change the Status of any Timesheets for the Week to &quot;Recalled&quot; Status whereby the Timesheet Status is Submitted.</inlineHelpText>
    <label>Enable Timesheet Recall</label>
    <type>Checkbox</type>
</CustomField>