force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Exclude_Timesheet_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exclude_Timesheet_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then it Exclude Weekends from Timesheet (My Timesheet) view.</description>
    <inlineHelpText>If checked then it Exclude Weekends from Timesheet view (My Timesheet).</inlineHelpText>
    <label>Exclude Timesheet Weekends</label>
    <type>Checkbox</type>
</CustomField>