force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Include_PTO_on_Timesheets__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include_PTO_on_Timesheets__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include PTO on Timesheets</label>
    <type>Checkbox</type>
</CustomField>