force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__isManager__c.field-meta.xml
<CustomField>
    <fullName>Krow__isManager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Resource Picklist</label>
    <type>Checkbox</type>
</CustomField>