force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Make_Billable_Flag_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Krow__Make_Billable_Flag_Read_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom Setting to make Billable flag Read-Only on My Timesheet.</description>
    <inlineHelpText>Custom Setting to make Billable flag Read-Only on My Timesheet.</inlineHelpText>
    <label>Make Billable Flag Read-Only</label>
    <type>Checkbox</type>
</CustomField>