force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Max_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Max_Total_Hours__c</fullName>
    <description>Enter a number representing the maximum total hours that must be attached to the Timesheet when submitting for approval - Total Hours field. This would be enforced only when the user submits for approval from the My Timesheet - if the hours are greater than Max Total Hours - produce an error message</description>
    <inlineHelpText>Enter a number representing the maximum total hours that must be attached to the Timesheet when submitting for approval - Total Hours field.</inlineHelpText>
    <label>Max Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>