force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Milestone_Required__c.field-meta.xml
<CustomField>
    <fullName>Krow__Milestone_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Required</label>
    <type>Checkbox</type>
</CustomField>