force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__No_Of_New_Rows_On_My_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Krow__No_Of_New_Rows_On_My_Timesheet__c</fullName>
    <defaultValue>10</defaultValue>
    <description>This custom will use when any lookup type field will display on my timesheet from field-Set on timesheet detail to avoid the lookup field issue.</description>
    <inlineHelpText>This custom will use when any lookup type field will display on my timesheet from field-Set on timesheet detail to avoid the lookup field issue.</inlineHelpText>
    <label>No of New Rows On My Timesheet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>