force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Notes_Required__c.field-meta.xml
<CustomField>
    <fullName>Krow__Notes_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then notes will required on the my timesheet.</description>
    <inlineHelpText>If checked, then notes will required on the my timesheet.</inlineHelpText>
    <label>Notes Required</label>
    <type>Checkbox</type>
</CustomField>