force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Order_Task_Option_By_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Order_Task_Option_By_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By enable this task option will display sort by project task on my timesheet</description>
    <inlineHelpText>By enable this task option will display sort by project task on my timesheet</inlineHelpText>
    <label>Order Task Option By Project</label>
    <type>Checkbox</type>
</CustomField>