force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Override_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Krow__Override_Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a user could update a timesheet that has time that was checked as Invoiced, otherwise, an error would be displayed.</description>
    <inlineHelpText>If checked, a user could update a timesheet that has time that was checked as Invoiced, otherwise, an error would be displayed.</inlineHelpText>
    <label>Override Invoiced</label>
    <type>Checkbox</type>
</CustomField>