force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Project_Task_Field_Length__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Task_Field_Length__c</fullName>
    <defaultValue>400</defaultValue>
    <description>Length(number) of pixel spaces between to control Project/Task.</description>
    <inlineHelpText>Length(number) of pixel spaces between to control Project/Task.</inlineHelpText>
    <label>Project/Task Field Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>