force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Punch_Time__c.field-meta.xml
<CustomField>
    <fullName>Krow__Punch_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is ON, user allowed to lock time as punch in and punch out.</description>
    <label>Punch Time</label>
    <type>Checkbox</type>
</CustomField>