force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Run_Auto_Save_Process__c.field-meta.xml
<CustomField>
    <fullName>Krow__Run_Auto_Save_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When It&apos;s Checked then If saving fails on my timesheet due to Unable to lock error then run autosave process for fail rows.</description>
    <inlineHelpText>When It&apos;s Checked then If saving fails on my timesheet due to Unable to lock error then run autosave process for fail rows.</inlineHelpText>
    <label>Run Auto Save Process</label>
    <type>Checkbox</type>
</CustomField>