force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Share_Timesheet_with_Manager__c.field-meta.xml
<CustomField>
    <fullName>Krow__Share_Timesheet_with_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, timesheet record will be shared with user&apos;s manager.</description>
    <inlineHelpText>If this is checked, timesheet record will be shared with user&apos;s manager.</inlineHelpText>
    <label>Share Timesheet with Manager</label>
    <type>Checkbox</type>
</CustomField>