force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Share_Timesheet_with_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Krow__Share_Timesheet_with_Project_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, timesheet will be shared with project manager.</description>
    <inlineHelpText>If this is checked, timesheet will be shared with project manager.</inlineHelpText>
    <label>Share Timesheet with Project Manager</label>
    <type>Checkbox</type>
</CustomField>