force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Split_Project_Task_Fields__c.field-meta.xml
<CustomField>
    <fullName>Krow__Split_Project_Task_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected,  the Project picklist field and the Task picklist field will be 2 separate fields.</description>
    <inlineHelpText>If selected,  the Project picklist field and the Task picklist field will be 2 separate fields.</inlineHelpText>
    <label>Split Project/Task Fields</label>
    <type>Checkbox</type>
</CustomField>