force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Timesheet_Admin__c.field-meta.xml
<CustomField>
    <fullName>Krow__Timesheet_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked and IF the Timesheet is NOT Approved, then the embedded vf timesheet component is editable.</description>
    <label>Timesheet Admin</label>
    <type>Checkbox</type>
</CustomField>