force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Unlock_Timesheet_on_Approval__c.field-meta.xml
<CustomField>
    <fullName>Krow__Unlock_Timesheet_on_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlock Timesheet on Approval</label>
    <type>Checkbox</type>
</CustomField>