force-app/main/default/objects/Krow__Krow_Timesheet_Configuration__c/fields/Krow__Validate_Against_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Validate_Against_Project_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then when the Timesheet is submitted, it will check the Timesheet Hours for that Project.</description>
    <inlineHelpText>If checked, then when the Timesheet is submitted, it will check the Timesheet Hours for that Project.</inlineHelpText>
    <label>Validate Against Project Hours</label>
    <type>Checkbox</type>
</CustomField>